--- a/index.html
+++ b/index.html
@@ -52,16 +52,11 @@
                 <label>You haven't rated this movie yet</label>
                 <input type="hidden" id="mId">
                 <fieldset>
-                    <input onclick="submitRating(this)" onmouseout="unFillStars(this)" onmouseover="fillStars(this)"
-                           name="rating" class="unfilled-star" type="image" value="1" src="img/star_not_filled.png">
-                    <input onclick="submitRating(this)" onmouseout="unFillStars(this)" onmouseover="fillStars(this)"
-                           name="rating" class="unfilled-star" type="image" value="2" src="img/star_not_filled.png">
-                    <input onclick="submitRating(this)" onmouseout="unFillStars(this)" onmouseover="fillStars(this)"
-                           name="rating" class="unfilled-star" type="image" value="3" src="img/star_not_filled.png">
-                    <input onclick="submitRating(this)" onmouseout="unFillStars(this)" onmouseover="fillStars(this)"
-                           name="rating" class="unfilled-star" type="image" value="4" src="img/star_not_filled.png">
-                    <input onclick="submitRating(this)" onmouseout="unFillStars(this)" onmouseover="fillStars(this)"
-                           name="rating" class="unfilled-star" type="image" value="5" src="img/star_not_filled.png">
+                    <input name="rating" class="unfilled-star" type="image" value="1" src="img/star_not_filled.png">
+                    <input name="rating" class="unfilled-star" type="image" value="2" src="img/star_not_filled.png">
+                    <input name="rating" class="unfilled-star" type="image" value="3" src="img/star_not_filled.png">
+                    <input name="rating" class="unfilled-star" type="image" value="4" src="img/star_not_filled.png">
+                    <input name="rating" class="unfilled-star" type="image" value="5" src="img/star_not_filled.png">
                 </fieldset>
             </div>
             <div id="rated"></div>
