--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <h2 id="pageTitle">Movies</h2>
 <div id="content" class="container-fluid">
     <div id="moviesSearch" class="spacing">
+        <h4>Recommended movies: </h4>
         <div id="recommendedMovies">
-            <h4>Recommended for you:</h4>
-            <span>-</span>
+
         </div>
-        <form class="form-inline" id="searchForm" role="search" method="post">
+        <form class="form-inline spacing" id="searchForm" role="search" method="post">
             <div class="form-group">
                 <input type="text" class="form-control" name="keyword" placeholder="Keyword">
             </div>
