--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="js/services/ajaxHttpCaller.js"></script>
     <script src="js/services/moviesApiCaller.js"></script>
     <script src="js/movieRating.js"></script>
+    <script src="js/myRatings.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
