--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <div class="md-form form-group">
                 <button type="submit" class="btn btn-primary animated slideInRight">Submit</button>
             </div>
+            <em>Rate 4 or more movies to show recommendations</em>
         </form>
         <div id="errorSearchForm" class="alert alert-danger spacing animated fadeInUp" role="alert"
              style="display: none">
